[package]
name = "ecfft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-poly = "0.4"
ark-ff-optimized = { path = "../optimized-fields" }
num-bigint = "0.4"
num-integer = "0.1"
rand = "0.8"