[package]
name = "ecfft"
description = "Elliptic curve fast fourier transform for all prime fields"
repository = "https://github.com/andrewmilson/ecfft"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
keywords = ["cryptography", "finite-fields", "elliptic-curves", "fft"]
categories = ["cryptography"]
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4"
ark-serialize = { version = "0.4", features = [ "std" ] }
ark-poly = "0.4"
ark-ff-optimized = { path = "../optimized-fields" }
num-bigint = "0.4"
num-integer = "0.1"
rand = "0.8"